button misalign quick fix

--- a/htdocs/bootstrap/css/custom-css.css
+++ b/htdocs/bootstrap/css/custom-css.css
@@ -449,7 +449,7 @@ div.navbar div.container div.navbar-brand {
 
 .btn {
     font-size: 14px;
-    margin: 10px 5px;
+    margin: 10px 5px 10px 0;
 }
 
 .btn-default {
